--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   command = "npm run build"
   publish = ".next"
-  environment = { 
-    NODE_VERSION = "20",
-    PRISMA_GENERATE_DATAPROXY = "false"
-  }
+  environment = { NODE_VERSION = "20", PRISMA_GENERATE_DATAPROXY = "false" }
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
